# Image-Processor

./: CMakeLists.txt  README.md  image_processor.cpp
Image/: color.cpp  color.h  image.cpp  image.h
args/: args.cpp  args.h
bmp/: dumper.cpp  dumper.h  loader.cpp  loader.h
filters/: blur.cpp  blur.h  crop_filter.cpp  crop_filter.h  edge_filter.cpp  edge_filter.h  filter.h  filter_registry.cpp  filter_registry.h  grayscale.cpp  grayscale.h  mosaic.cpp  mosaic.h  negative_filter.cpp  negative_filter.h  sharp.cpp  sharp.h
